--- a/components/zt6jkp3zr-python/overlays/development/deployment-patch.yaml
+++ b/components/zt6jkp3zr-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zt6jkp3zr-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-e3ed5e87fd.gxpf.p3.openshiftapps.com/rhtap/rhtap-qe:47f4ec104c7cb6962312d113e2a5cc38405fc3c1@sha256:485c75308ad004ba696c3a7ccf22ad067ccd50dbc11cb15e5e999e8b7acb789f
+          name: container-image
